# dymium

./: ARCHITECTURE.md  Cargo.toml  LICENSE-README.md  README.md  rustdoc-check.sh
dymium-term/: ARCHITECTURE.md  Cargo.toml  capdata.yaml
dymium-term/src/: capinfo.rs  cmd.rs  lib.rs  style.rs
dymium-term/src/color/: css_names.rs  mod.rs  vim_names.rs
